<resources>
    <string name="app_name">World of Paw</string>
    <string name="openDrawer" translatable="false">open_drawer</string>
    <string name="closeDrawer" translatable="false">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_account">Account</string>
    <string name="nav_mydog">My Pet</string>
    <string name="nav_myvet">My Veterinarian</string>
    <string name="nav_message">Messaging</string>
    <string name="nav_users">World of Paw Users</string>
    <string name="nav_lost">LOST (Find My Pet)</string>
    <string name="nav_adopt">Adopt a Pet</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info_contact">Contact Us</string>
    <string name="nav_wophome">World of Paw</string>
    <string name="nav_logout">Logout</string>
    <string name="Language">Selected Language</string>
    <string name="exit">Exit</string>
    <string name="prompt_dark_mode">Enable Dark Mode</string>
    <string name="action_dark_mode">Night Mode</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="owner">Owner</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="prompt_pet_name">Pet Name</string>
    <string name="prompt_pet_owner">Pet Owner</string>
    <string name="prompt_pet_breed">Pet Breed</string>
    <string name="prompt_pet_age">Pet Age</string>
    <string name="prompt_pet_address">Pet Address</string>
    <string name="action_pet_save">Save My Pet</string>
    <string name="action_tap_on_cam_pet">Tap on camera to choose your pets profile picture.</string>
    <string name="action_save_success">Save successful</string>
    <string name="action_save_inprogress">Save in progress</string>
    <string name="message_save_pet">Please wait while your pet record is saving.</string>
    <string name="error_no_image">No image selected</string>
    <string name="choose_gallery">Gallery</string>
    <string name="add_image">Add Image</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="add_mypet">Add My Pet</string>
    <string name="title_activity_display_image">Display Image</string>
    <string name="image_information">Image Information</string>
    <string name="choose_camera">Photo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="start_top" translatable="false">M 20.7 7 C 21.1 6.6 21.1 6 20.7 5.6 L 18.4 3.3 C 18 2.9 17.4 2.9 17 3.3 L 15.2 5.1 L 19 8.9</string>
    <string name="end_top" translatable="false">M 19.6 8 C 20 7.6 20 7 19.6 6.6 L 17.3 4.3 C 16.9 3.9 16.3 3.9 15.9 4.3 L 14.1 6.1 L 17.9 9.9</string>
    <string name="prompt_mute">Mute Notifications</string>
    <string name="prompt_stared">Stared Messages</string>
    <string name="prompt_lovely">Lovely</string>
    <string name="prompt_friends_count">Total Friends</string>
    <string name="prompt_lovely_count">Lovelies</string>
    <string name="prompt_owned_pets">Owned Pets</string>
    <string name="action_block">Block User</string>
    <string name="action_send_request">Send Friend Request</string>
    <string name="action_unfriend">Unfriend</string>
    <string name="action_accept_request">Accept Friend Request</string>
    <string name="action_decline_request">Decline Friend Request</string>
    <string name="action_cancel_request">Cancel Friend Request</string>
    <string name="message_friends_with_you_since">Friends with you since </string>
    <string name="message_send">Friend request sent.</string>
    <string name="message_decline">Friend request declined.</string>
    <string name="m_longitude">Longitude</string>
    <string name="m_latitude">Latitude</string>
    <string name="longitude">Longitude (Number)</string>
    <string name="latitude">Latitude (Number)</string>
    <string name="get_my_current_location">My Current Location</string>
    <string name="no_input">Please enter some value</string>
    <string name="progressdialog_waiting_for_tag">Waiting for NFC Tag</string>
    <string name="progressdialog_waiting_for_tag_message">Please approach NFC Tag to save the location.</string>
    <string name="Label">Pin Name</string>
    <string name="prompt_nfc" translatable="false">NFC</string>
    <string name="prompt_ble" translatable="false">BLE</string>
    <string name="write_the_address_to_nfc_tag">Write the address to NFC tag</string>
    <string name="write">Write</string>
    <string name="message_enable_nfc">Please Enable your Location services</string>
    <string name="message_provider_enabled">Provider enabled!</string>
    <string name="message_nfc_write_success">Writing completed successfully!</string>
    <string name="message_nfc_success">Text written to the NFC tag successfully!</string>
    <string name="message_nfc_contents">NFC Contents</string>
    <string name="error_nfc_proximity">Please approach the NFC Tag to your device and make sure that NFC is on. </string>
    <string name="error_nfc_write">Error during writing, is the NFC tag close enough to your device?</string>
    <string name="error_nfc_detection">No NFC tag detected!</string>
    <string name="error_nfc_support">This device doesn\'t support NFC.</string>
    <string name="error_ble_not_support">This device doesn\'t support BLE (Bluetooth Low Energy).</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_section1">Overview</string>
    <string name="title_section2">Services</string>
    <string name="title_section3">Chat</string>
    <string name="title_section4">Test</string>
    <string name="overview_temperature">Temperature (°C)</string>
    <string name="title_activity_basic_ble">BasicBLEActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bonded_state">bonded</string>
    <string name="bonding_state">bonding</string>
    <string name="status_disconnected">disconnected</string>
    <string name="status_connecting">connecting…</string>
    <string name="status_connected">gatt connected</string>
    <string name="status_discovered">gatt connected, services discovered</string>
    <string name="status_chat_available">chat available</string>
    <string name="status_sps_available">sps available</string>
    <string name="status_fifo_unavailable">fifo characteristc not found!</string>
    <string name="status_fifo_credits_unavailable">credits and/or fifo characteristcs not found!</string>
    <string name="not_available">N/A</string>
    <string name="button_start">Start</string>
    <string name="logs_tittle">Logs</string>
    <string name="ip_address_tittle">IP Address</string>
    <string name="port_tittle">Port</string>
    <string name="port_hint">servers port</string>
    <string name="remote_start_button">Stop</string>
    <string name="remote_stop_button">Start</string>
    <string name="fragment_request">REQUESTS</string>
    <string name="fragment_chats">MESSAGES</string>
    <string name="fragment_friends">FRIENDS</string>
    <string name="prompt_status">Status</string>
    <string name="prompt_about">About</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_enter_name">Enter your name</string>
    <string name="prompt_add_about">Add About</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_change_pet_name">Change your pets name</string>
    <string name="prompt_change_pet_breed">Change your pets breed</string>
    <string name="prompt_chage_pet_age">Change your pets age</string>
    <string name="prompt_change_pet_address">Change your pets address</string>
    <string name="description_text_name">This is not your pin. This name will be visible only to World of Paw users.</string>
    <string name="description_pet_name">This is not your pets pin. This name will be visible only to World of Paw users.</string>
    <string name="description_address">Your pets address is vital information for finding them.
        Providing correct addresses will always minimize the time needed to find your pets.</string>
    <string name="action_uploading_image">Uploading Image…</string>
    <string name="action_uploading_message">Please wait while the image is uploading.</string>
    <string name="action_user_status">Hey there, I am using World of Paw.</string>
    <string name="action_upload_image">Upload Image</string>
    <string name="action_change_status">Change Status</string>
    <string name="action_change_nickname">Change Nickname</string>
    <string name="action_saving_changes">Saving Changes</string>
    <string name="action_saving_messsage">Please wait while changes being made.</string>
    <string name="error_uploading">Error occurred while uploading. Please try again later.</string>
    <string name="error_saving">Error occurred while saving changes. Please try again later.</string>
    <string name="login">Login</string>
    <string name="action_create_a_new">Create A New Account</string>
    <string name="action_login_to_your">Login To Your Account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="action_sign_up_dialog">Please wait while we create your account.</string>
    <string name="action_tap_on_cam">Tap on Avatar to choose your profile picture.</string>
    <string name="action_save">Save</string>
    <string name="action_profile_update">Profile Updated</string>
    <string name="action_verify">Verify your Email</string>
    <string name="action_verify_sent">Verification Send.</string>
    <string name="error_lang_selected">Language is already selected.</string>
    <string name="error_verification">Email Not Verified (Click to Verify)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password length must be at least 6.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_already_registered">You are already registered.</string>
    <string name="error_back_button">Back button is disabled</string>
    <string name="error_global_login">There is no such user or password or email address is wrong.</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="permission_storage">Storage permissions are needed for providing adding pictures.</string>
    <string name="permission_camera">Camera permissions are needed for capturing photos.</string>
    <string name="permission_succsess">All permissions are granted by user!</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>